# life

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CORE_STATS_CONSOLIDATION_PLAN.md  DEPENDENCY_MANAGEMENT.md  LICENSE  Makefile  README.md  conftest.py  constraints.txt  life_prd.md  manage.py  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.cursor/rules/: data-flow.mdc  extension-safety.mdc  model-structure.mdc  view-consistency.mdc
.github/workflows/: architecture-check.yml  ci.yml
.kiro/specs/domain-architecture-foundation/: design.md  requirements.md  tasks.md
.kiro/specs/personal-life-dashboard/: design.md  requirements.md  tasks.md
.kiro/steering/: architecture.md  business-logic.md  domain-events-catalog.md  product.md  structure.md  tech.md
docs/: DEVELOPMENT.md  DOMAIN_TESTING.md
docs/architecture/: README.md  bounded-contexts.md
life_dashboard/: conftest.py  manage.py  settings.py
life_dashboard/achievements/: __init__.py  admin.py  apps.py  models.py  views.py
life_dashboard/achievements/application/: __init__.py
life_dashboard/achievements/domain/: __init__.py  entities.py  repositories.py  services.py  value_objects.py
life_dashboard/achievements/infrastructure/: __init__.py  adapters.py  repositories.py
life_dashboard/achievements/interfaces/: __init__.py
life_dashboard/achievements/migrations/: 0001_initial.py  0002_alter_achievement_tier.py  0003_alter_achievement_required_quest_completions_default.py  0003_alter_achievement_tier_choices.py  0004_alter_achievement_experience_reward_and_more.py  0005_alter_achievement_tier_choices.py  0006_alter_achievement_required_quest_completions.py
life_dashboard/achievements/tests/: __init__.py  test_api_snapshots.py  test_domain_entities.py  test_domain_properties.py  test_infrastructure_repositories.py  test_service_contracts.py
life_dashboard/common/: __init__.py  value_objects.py
life_dashboard/core_stats/: __init__.py  admin.py  apps.py  models.py  views.py
life_dashboard/core_stats/migrations/: 0001_initial.py  0002_deprecate_core_stats.py
life_dashboard/dashboard/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  services.py  tasks.py  urls.py  utils.py  views.py
life_dashboard/dashboard/application/: __init__.py  services.py
life_dashboard/dashboard/domain/: __init__.py  entities.py  repositories.py  state_machines.py  unit_of_work.py  value_objects.py
life_dashboard/dashboard/infrastructure/: __init__.py  repositories.py
life_dashboard/dashboard/interfaces/: __init__.py  contracts.py
life_dashboard/dashboard/migrations/: 0001_initial.py  0002_stats_charisma_stats_intelligence_stats_wisdom.py  0003_userprofile.py  0004_userprofile_email_userprofile_first_name_and_more.py  0005_remove_userprofile_experience_and_more.py  0006_userprofile_experience_points_userprofile_level.py
life_dashboard/dashboard/queries/: __init__.py  profile_queries.py
life_dashboard/dashboard/templates/: base.html
life_dashboard/dashboard/templatetags/: __init__.py  dashboard_filters.py
life_dashboard/dashboard/tests/: test_api_snapshots.py  test_atomic_user_creation.py  test_celery_fallback.py  test_domain.py  test_domain_properties.py  test_profile_queries.py  test_repositories.py  test_secure_exception_handling.py  test_service_contracts.py  test_user_profile_model.py
life_dashboard/dashboard/utils/: __init__.py  base_stat.py  overview.py
life_dashboard/journals/: __init__.py  admin.py  apps.py  models.py  views.py
life_dashboard/journals/application/: __init__.py
life_dashboard/journals/domain/: __init__.py  entities.py  repositories.py  services.py  value_objects.py
life_dashboard/journals/infrastructure/: __init__.py
life_dashboard/journals/interfaces/: __init__.py
life_dashboard/journals/migrations/: 0001_initial.py  0002_alter_journalentry_mood.py
life_dashboard/journals/tests/: __init__.py  test_api_snapshots.py  test_domain_entities.py  test_domain_properties.py  test_service_contracts.py
life_dashboard/life_dashboard/: __init__.py  asgi.py  celery.py  settings.py  test_runner.py  test_settings.py  urls.py  wsgi.py
life_dashboard/life_stats/: __init__.py  admin.py  apps.py  models.py  views.py
life_dashboard/life_stats/migrations/: 0001_initial.py  0002_deprecate_life_stats.py
life_dashboard/privacy/: __init__.py
life_dashboard/privacy/application/: __init__.py  services.py
life_dashboard/privacy/domain/: __init__.py  entities.py  repositories.py  value_objects.py
life_dashboard/privacy/tests/: test_privacy_service_read_paths.py  test_verification_method_fix.py
life_dashboard/quests/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
life_dashboard/quests/application/: __init__.py  services.py
life_dashboard/quests/domain/: __init__.py  entities.py  repositories.py  services.py  value_objects.py
life_dashboard/quests/infrastructure/: __init__.py  repositories.py
life_dashboard/quests/interfaces/: __init__.py  contracts.py
life_dashboard/quests/migrations/: 0001_initial.py  0002_alter_habit_options_alter_habitcompletion_options_and_more.py  0003_remove_quest_due_date_remove_quest_experience_reward_and_more.py  0006_userprofile.py  (+10 more)
life_dashboard/shared/: README.md  __init__.py  queries.py
life_dashboard/skills/: __init__.py  admin.py  apps.py  models.py  registry.py  views.py
life_dashboard/stats/: AGENTS.md  __init__.py  admin.py  apps.py  models.py  services.py
life_dashboard/templates/: base.html
life_dashboard/tests/: conftest.py  test_auth.py  test_dashboard.py  test_habits.py  test_quests.py
scripts/: check-architecture.py  check-layering.py  generate-constraints.py  run-domain-tests.py  run-import-linter.py
staticfiles/css/: base.css
tests/: conftest.py  snapshot_utils.py  test_basic.py
tests/dashboard/: test_reset_database.py  test_reset_management_command.py
tests/quests/: test_domain_value_objects.py  test_infrastructure_repositories.py
(+142 files in other folders)
